--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -15,13 +15,13 @@
 
 .header__container {
   min-height: rem(70);
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: rem(20);
-  padding-right: rem(20);
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @include tablet {
+    justify-content: start;
+  }
 }
 
 .header__logo img {
@@ -32,10 +32,32 @@
 .header__nav {
   min-width: rem(240);
   width: rem(667);
-  margin-top: auto;
-  margin-bottom: auto;
   font-size: rem(16);
   text-transform: uppercase;
+
+  @include tablet {
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--color-green);
+    position: absolute;
+    top: 0;
+    left: 0;
+    translate: 0 -100%;
+    transition: translate 0.5s ease;
+
+    &.open {
+      translate: 0 0;
+      display: flex;
+      justify-content: center;
+      font-size: rem(24);
+
+      ul {
+        flex-direction: column;
+        justify-content: center;
+        gap: rem(20);
+      }
+    }
+  }
 
   ul {
     display: flex;
@@ -63,33 +85,44 @@
   justify-content: space-between;
   background-color: transparent;
   border: none;
+
+  &.open {
+    position: relative;
+    z-index: 101;
+
+    span {
+      &:nth-of-type(1) {
+        rotate: 45deg;
+        translate: 0 320%;
+      }
+
+      &:nth-of-type(2) {
+        opacity: 0;
+      }
+
+      &:nth-of-type(3) {
+        rotate: -45deg;
+        translate: 0 -320%;
+      }
+    }
+  }
+
+  @include tablet {
+    display: flex;
+  }
 }
 
-.header-menu-btn span {
+.header__menu-btn span {
+  display: block;
   width: 100%;
   height: rem(2);
   border-radius: rem(10);
-  background-color: #fff;
+  background-color: var(--color-white);
   transition: rotate 0.2s ease, opacity 0.2s ease;
-}
 
-.header-menu-btn.open {
-  position: relative;
-  z-index: 101;
-}
-
-.header-menu-btn.open span:nth-of-type(1) {
-  rotate: 45deg;
-  translate: 0 rem(11);
-}
-
-.header-menu-btn.open span:nth-of-type(2) {
-  opacity: 0;
-}
-
-.header-menu-btn.open span:nth-of-type(3) {
-  rotate: -45deg;
-  translate: 0 -rem(11);
+  @include tablet {
+    height: 2px;
+  }
 }
 
 .header__buy {
@@ -103,6 +136,15 @@
   font-weight: 300;
   font-size: rem(16);
   text-wrap: nowrap;
+
+  @include tablet {
+    margin-left: auto;
+    margin-right: rem(40);
+  }
+
+  @include mobile {
+    margin-right: rem(28);
+  }
 
   svg {
     width: rem(16);
@@ -126,6 +168,10 @@
   color: var(--color-green-dark);
   text-wrap: nowrap;
 
+  @include mobile {
+    width: rem(51);
+  }
+
   span {
     font-weight: 300;
     font-size: rem(18);
@@ -147,116 +193,116 @@
   rotate: -90deg;
 }
 
-@media (min-width: rem(768)) {
-  .nav-item a:hover {
-    opacity: 0.7;
-  }
+// @media (min-width: rem(768)) {
+//   .nav-item a:hover {
+//     opacity: 0.7;
+//   }
 
-  .nav-item.disabled a:hover {
-    color: #fff;
-    cursor: auto;
-  }
-}
+//   .nav-item.disabled a:hover {
+//     color: #fff;
+//     cursor: auto;
+//   }
+// }
 
-@media (max-width: rem(767)) {
-  .nav-item a:active {
-    opacity: 0.7;
-  }
+// @media (max-width: rem(767)) {
+//   .nav-item a:active {
+//     opacity: 0.7;
+//   }
 
-  .nav-item.disabled a:active {
-    color: #fff;
-  }
-}
+//   .nav-item.disabled a:active {
+//     color: #fff;
+//   }
+// }
 
-@media (min-width: rem(768)) {
-  .buy-button:hover {
-    box-shadow: 0 0 rem(5) rgba(0, 0, 0, 0.5) inset;
-  }
-}
+// @media (min-width: rem(768)) {
+//   .buy-button:hover {
+//     box-shadow: 0 0 rem(5) rgba(0, 0, 0, 0.5) inset;
+//   }
+// }
 
-@media (max-width: rem(767)) {
-  .buy-button:active {
-    box-shadow: 0 0 rem(5) rgba(0, 0, 0, 0.5) inset;
-  }
-}
+// @media (max-width: rem(767)) {
+//   .buy-button:active {
+//     box-shadow: 0 0 rem(5) rgba(0, 0, 0, 0.5) inset;
+//   }
+// }
 
-@media (max-width: rem(1023)) {
-  .buy-button {
-    padding-left: rem(20);
-    padding-right: rem(20);
-  }
-}
+// @media (max-width: rem(1023)) {
+//   .buy-button {
+//     padding-left: rem(20);
+//     padding-right: rem(20);
+//   }
+// }
 
-@media screen and (max-width: rem(1023)) {
-  .main-nav {
-    text-transform: capitalize;
-  }
+// @media screen and (max-width: rem(1023)) {
+//   .main-nav {
+//     text-transform: capitalize;
+//   }
 
-  .nav-list {
-    justify-content: space-around;
-  }
-}
+//   .nav-list {
+//     justify-content: space-around;
+//   }
+// }
 
-@media screen and (max-width: rem(767)) {
-  .header-container {
-    min-height: rem(50);
-  }
+// @media screen and (max-width: rem(767)) {
+//   .header-container {
+//     min-height: rem(50);
+//   }
 
-  .main-nav {
-    width: 100%;
-    height: 100vh;
-    padding-top: 20vh;
-    background-color: #64b22a;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    translate: 0 -100%;
-    z-index: 100;
-    transition: translate 0.3s ease;
-    font-size: rem(16);
-    text-transform: uppercase;
-    visibility: hidden;
-  }
+//   .main-nav {
+//     width: 100%;
+//     height: 100vh;
+//     padding-top: 20vh;
+//     background-color: #64b22a;
+//     display: flex;
+//     justify-content: center;
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     translate: 0 -100%;
+//     z-index: 100;
+//     transition: translate 0.3s ease;
+//     font-size: rem(16);
+//     text-transform: uppercase;
+//     visibility: hidden;
+//   }
 
-  .main-nav.open {
-    translate: 0 0;
-    visibility: visible;
-  }
+//   .main-nav.open {
+//     translate: 0 0;
+//     visibility: visible;
+//   }
 
-  .nav-list {
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    gap: rem(20);
-    opacity: 0;
-  }
+//   .nav-list {
+//     flex-direction: column;
+//     justify-content: start;
+//     align-items: center;
+//     gap: rem(20);
+//     opacity: 0;
+//   }
 
-  .main-nav.open .nav-list {
-    opacity: 1;
-  }
+//   .main-nav.open .nav-list {
+//     opacity: 1;
+//   }
 
-  .header-menu-btn {
-    display: flex;
-  }
+//   .header-menu-btn {
+//     display: flex;
+//   }
 
-  .buy-button {
-    margin-left: auto;
-    margin-right: rem(20);
-    padding: rem(6) rem(18);
-    font-size: rem(14);
-  }
+//   .buy-button {
+//     margin-left: auto;
+//     margin-right: rem(20);
+//     padding: rem(6) rem(18);
+//     font-size: rem(14);
+//   }
 
-  .buy-button svg {
-    width: rem(12);
-    height: rem(16);
-  }
+//   .buy-button svg {
+//     width: rem(12);
+//     height: rem(16);
+//   }
 
-  .header-buy-btn {
-    width: rem(42);
-    border-radius: rem(20) 0 0 rem(20);
-    font-size: rem(16);
-    translate: 0 -50%;
-  }
-}
+//   .header-buy-btn {
+//     width: rem(42);
+//     border-radius: rem(20) 0 0 rem(20);
+//     font-size: rem(16);
+//     translate: 0 -50%;
+//   }
+// }
