--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,8 +1,15 @@
 @use "helpers" as *;
 
 html {
-  overflow: hidden;
   font-size: vw(16px);
+
+  @include tablet {
+    font-size: rem(18);
+  }
+
+  @include mobile {
+    font-size: rem(10);
+  }
 }
 
 body {
