--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -1,14 +1,15 @@
 @use "../helpers/" as *;
 
 .footer {
-  height: 50vh !important;
+  height: 50vh;
   translate: 0 50%;
   width: 100vw;
-  //   padding-top: rem(90);
   padding-bottom: rem(90);
-  //   height: 100vh !important;
-
   position: relative;
+
+  @include tablet {
+    padding-bottom: 0;
+  }
 }
 
 .footer {
@@ -16,7 +17,7 @@
 }
 
 .footer__inner {
-  width: rem(1180);
+  max-width: rem(1180);
   margin-left: auto;
   margin-right: auto;
   padding-left: rem(15);
@@ -27,6 +28,12 @@
   font-size: rem(14);
   padding-bottom: rem(150);
   padding-top: rem(30);
+
+  @include tablet {
+    padding-bottom: 0;
+    padding-left: rem(40);
+    padding-right: rem(40);
+  }
 }
 
 .footer__inner ul {
@@ -86,106 +93,3 @@
   text-transform: uppercase;
   line-height: 110%;
 }
-
-.footer__contraindications span {
-  //   font-size: rem(33);
-}
-
-//   @media (min-width: rem(768)) {
-//     .footer {
-//       height: 50vh !important;
-//       translate: 0 50%;
-//     }
-
-//     .footer__inner {
-//       width: rem(750);
-//     }
-
-//     .header__nav-mobile {
-//       display: none;
-//     }
-//     .header__logo {
-//       margin-right: 5%;
-//     }
-//     .header__nav {
-//       display: block;
-//       left: auto;
-//       position: relative;
-//       top: auto;
-//       width: auto;
-//     }
-//     .header__where-buy {
-//       position: absolute;
-//       right: 0;
-//       top: rem(60);
-//       display: flex;
-//       flex-wrap: wrap;
-//     }
-//     .header__where-buy-link {
-//       background-color: #60b124;
-//       border-radius: rem(32);
-//       display: inline-block;
-//       font-size: rem(18);
-//       height: rem(46);
-//       line-height: rem(46);
-//       margin: rem(5) 0 rem(10) auto;
-//       padding: 0 rem(24);
-//       width: auto;
-//       min-width: 50%;
-//     }
-//     .header__where-buy-link img {
-//       display: inline-block;
-//     }
-//     .header__where-buy-link:hover {
-//       background-color: #67ba29;
-//       color: #fff;
-//     }
-//     .header__where-buy-mobile {
-//       display: none;
-//     }
-//     .content__section {
-//       margin-bottom: rem(20);
-//     }
-//     .content__section--pregnancy {
-//       background-image: url(/local/templates/ecofucin.ru/images/pregnancy__woman.png);
-//       background-position: calc(100% + rem(135)) -rem(76);
-//       background-repeat: no-repeat;
-//     }
-
-//     .footer__privacy-policy {
-//       width: 35%;
-//     }
-//     .footer__forma {
-//       width: 100%;
-//       padding-top: rem(20);
-//     }
-//     .footer__site-info {
-//       margin: 0;
-//       text-align: right;
-//       width: 65%;
-//     }
-//     .footer__contraindications {
-//       font-size: rem(30);
-//       margin-top: rem(22);
-//     }
-//     .footer__contraindications span {
-//       display: inline;
-//       font-size: inherit;
-//     }
-//   }
-
-//   @media (min-width: rem(992)) {
-//     .footer__inner {
-//       width: rem(970);
-//     }
-//     .footer__contraindications {
-//       font-size: rem(48);
-//       letter-spacing: -rem(3);
-//     }
-//   }
-
-//   @media (min-width: rem(1200)) {
-//     .footer__inner {
-//       width: rem(1170);
-//     }
-//   }
