--- a/scss/block/_thanks.scss
+++ b/scss/block/_thanks.scss
@@ -10,14 +10,22 @@
   width: min(100%, rem(1180));
   margin-left: auto;
   margin-right: auto;
-  padding: rem(60) rem(40) rem(60) rem(80);
+  padding: rem(60) rem(60) rem(60) rem(80);
   border-radius: rem(20);
   background: #f5f3f4;
+
+  @include tablet {
+    width: initial;
+  }
 }
 
 .thanks__images {
   display: flex;
   gap: rem(20);
+
+  @include tablet {
+    margin-right: auto;
+  }
 
   img {
     width: rem(202);
@@ -27,14 +35,24 @@
 
 .thanks__wrapper {
   display: flex;
+  justify-content: space-between;
   width: 100%;
   align-items: center;
+
+  @include tablet {
+    flex-direction: column;
+    gap: rem(50);
+  }
 }
 
 .thanks__text {
-  width: 100%;
-  max-width: rem(585);
-  margin-right: rem(100);
+  p {
+    max-width: rem(585);
+
+    @include tablet {
+      max-width: 100%;
+    }
+  }
 }
 
 .thanks-text__title {
@@ -44,8 +62,12 @@
   font-weight: 600;
   font-size: rem(44);
   line-height: rem(50);
-  color: #66b72a;
+  color: var(--color-green);
   margin-bottom: rem(35);
+
+  @include tablet {
+    max-width: 100%;
+  }
 }
 
 .thanks-text__description {
@@ -57,6 +79,10 @@
   line-height: rem(20);
   color: #000000;
   margin-bottom: rem(20);
+
+  @include tablet {
+    margin-bottom: rem(35);
+  }
 }
 
 .thanks-text__where-buy {
@@ -72,7 +98,6 @@
   font-size: rem(20);
   line-height: 90%;
   color: var(--color-green-dark);
-  text-decoration: none;
   text-wrap: nowrap;
   transition: 0.2s;
 
