--- a/scss/block/_treatment.scss
+++ b/scss/block/_treatment.scss
@@ -21,6 +21,10 @@
   display: flex;
   align-items: center;
   gap: rem(60);
+
+  @include tablet {
+    flex-direction: column-reverse;
+  }
 }
 
 .treatment__card {
@@ -35,12 +39,20 @@
   border-radius: rem(30);
   background-color: var(--color-white);
 
+  @include tablet {
+    width: 100%;
+  }
+
   p {
     max-width: rem(350);
     font-size: rem(16);
     line-height: 125%;
     font-weight: 600;
     color: var(--color-green-alt);
+
+    @include tablet {
+      max-width: rem(500);
+    }
   }
 
   img {
@@ -59,10 +71,15 @@
   font-family: var(--font-family);
   font-weight: 400;
   line-height: 133%;
+
+  @include tablet {
+    max-width: 100%;
+    text-align: center;
+  }
 }
 
 .treatment__description {
-  min-width: rem(1102);
+  max-width: rem(1102);
   color: var(--color-white);
   font-size: rem(18);
   font-family: var(--second-family);
@@ -70,6 +87,10 @@
   line-height: 156%;
   text-align: center;
   margin-top: rem(50);
+
+  @include tablet {
+    font-size: rem(16);
+  }
 }
 
 //   @media (max-width: rem(767)) {
