--- a/scss/_utils.scss
+++ b/scss/_utils.scss
@@ -4,7 +4,6 @@
   max-width: vw(1220px);
   width: 100%;
   margin-inline: auto;
-  padding-inline: var(--container-padding-x);
 }
 
 .visually-hidden {
@@ -26,6 +25,17 @@
 .slide {
   height: 100vh;
   width: 100vw;
+
+  &.slider-off {
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    padding-bottom: rem(70);
+
+    .hero__container {
+      min-height: 100vh;
+    }
+  }
 }
 
 .accent-color {
