--- a/scss/block/_benefits.scss
+++ b/scss/block/_benefits.scss
@@ -5,11 +5,6 @@
   display: flex;
   position: relative;
   align-items: center;
-
-  @include tablet {
-    // padding-top: rem(120);
-    // align-items: start;
-  }
 }
 
 .benefits__container {
@@ -66,6 +61,10 @@
     align-items: center;
     gap: rem(20);
     counter-increment: num;
+
+    @include mobile {
+      border-radius: rem(30);
+    }
 
     &:last-of-type {
       margin-bottom: 0;
