modified:   css/main.css 	modified:   css/main.css.map 	modified:   index.html 	modified:   main.js 	modified:   scss/block/_footer.scss 	modified:   scss/block/_hero.scss 	modified:   scss/block/_treatment.scss

--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -15,6 +15,10 @@
     height: 100vh;
     translate: 0 40%;
   }
+
+  @media screen and (max-width: 375px) {
+    translate: 0 20%;
+  }
 }
 
 .footer {
