--- a/css/main.css
+++ b/css/main.css
@@ -675,14 +675,14 @@ button[aria-label]::before {
 @media (width <= 48.06125rem) {
   .hero__product-img {
     width: 28.75rem;
-    bottom: 2.5rem;
+    bottom: 4.375rem;
     left: 50%;
     translate: -50%;
   }
 }
 @media screen and (max-width: 375px) {
   .hero__product-img {
-    width: 25rem;
+    width: 22.5rem;
   }
 }
 @media screen and (max-height: 500px) {
@@ -1603,6 +1603,8 @@ button[aria-label]::before {
 
 .treatment__description {
   max-width: 68.875rem;
+  margin-left: auto;
+  margin-right: auto;
   color: var(--color-white);
   font-size: 1.125rem;
   font-family: var(--second-family);
@@ -1960,6 +1962,11 @@ button[aria-label]::before {
   .footer {
     height: 100vh;
     translate: 0 40%;
+  }
+}
+@media screen and (max-width: 375px) {
+  .footer {
+    translate: 0 20%;
   }
 }
 
