--- a/scss/block/_treatment.scss
+++ b/scss/block/_treatment.scss
@@ -80,6 +80,8 @@
 
 .treatment__description {
   max-width: rem(1102);
+  margin-left: auto;
+  margin-right: auto;
   color: var(--color-white);
   font-size: rem(18);
   font-family: var(--second-family);
