--- a/scss/block/_importance.scss
+++ b/scss/block/_importance.scss
@@ -4,6 +4,11 @@
   padding-top: rem(70);
   display: flex;
   align-items: center;
+
+  @include mobile {
+    padding-top: rem(100);
+    align-items: start;
+  }
 }
 
 .importance__title {
@@ -12,6 +17,10 @@
   font-weight: 400;
   line-height: 100%;
   text-align: center;
+
+  @include mobile {
+    font-size: 28px;
+  }
 }
 
 .importance__content {
@@ -54,6 +63,10 @@
     max-width: 100%;
     text-align: left;
   }
+
+  @include mobile {
+    font-size: 14px;
+  }
 }
 
 .importance__card p {
@@ -67,6 +80,10 @@
 
   @include tablet {
     max-width: rem(450);
+  }
+
+  @include mobile {
+    font-size: 12px;
   }
 }
 
