--- a/scss/block/_symptoms.scss
+++ b/scss/block/_symptoms.scss
@@ -42,6 +42,10 @@
   @include tablet {
     margin-top: 0;
   }
+
+  @include mobile {
+    font-size: 28px;
+  }
 }
 
 .symptoms__description {
@@ -58,6 +62,10 @@
 
   @include tablet {
     margin-bottom: rem(40);
+  }
+
+  @include mobile {
+    font-size: 14px;
   }
 }
 
@@ -98,6 +106,10 @@
       width: 100%;
       min-height: rem(200);
     }
+
+    @include mobile {
+      font-size: 12px;
+    }
   }
 }
 
@@ -111,45 +123,3 @@
     width: rem(415);
   }
 }
-
-//   @media (max-width: rem(1023)) {
-//     .symptoms-img {
-//       left: -rem(130);
-//     }
-//   }
-
-//   @media (max-width: rem(767)) {
-//     .symptoms-container {
-//       justify-content: start;
-//     }
-
-//     .symptoms-section .section-title {
-//       margin-top: 0;
-//       font-size: rem(24);
-//     }
-
-//     .symptoms-section .section-description {
-//       margin-bottom: rem(20);
-//       font-size: rem(16);
-//     }
-
-//     .symptoms-list {
-//       align-self: center;
-//       justify-self: center;
-//       display: flex;
-//       flex-direction: column;
-//     }
-
-//     .symptoms-list li {
-//       width: rem(320);
-//       min-height: rem(100);
-//       padding-left: rem(20);
-//       padding-right: rem(20);
-//       border-radius: rem(20);
-//       font-size: rem(16);
-//     }
-
-//     .symptoms-img {
-//       display: none;
-//     }
-//   }
