--- a/scss/block/_treatment.scss
+++ b/scss/block/_treatment.scss
@@ -5,6 +5,11 @@
   background-color: var(--color-green);
   display: flex;
   align-items: center;
+
+  @include mobile {
+    padding-top: rem(100);
+    align-items: start;
+  }
 }
 
 .treatment__title {
@@ -14,6 +19,10 @@
   font-weight: 400;
   line-height: 100%;
   text-align: center;
+
+  @include mobile {
+    font-size: 28px;
+  }
 }
 
 .treatment__content {
@@ -53,6 +62,10 @@
     @include tablet {
       max-width: rem(500);
     }
+
+    @include mobile {
+      font-size: 12px;
+    }
   }
 
   img {
@@ -76,6 +89,10 @@
     max-width: 100%;
     text-align: center;
   }
+
+  @include mobile {
+    font-size: 14px;
+  }
 }
 
 .treatment__description {
@@ -93,48 +110,7 @@
   @include tablet {
     font-size: rem(16);
   }
+  @include mobile {
+    font-size: 14px;
+  }
 }
-
-//   @media (max-width: rem(767)) {
-//     .treatment-section {
-//       align-items: start;
-//     }
-
-//     .treatment-section .section-title {
-//       font-size: rem(24);
-//       line-height: 120%;
-//     }
-
-//     .treatment-content {
-//       margin-top: rem(20);
-//       flex-direction: column-reverse;
-//       gap: rem(20);
-//     }
-
-//     .treatment-text p {
-//       text-align: center;
-//       font-size: rem(16);
-//       line-height: 120%;
-//     }
-
-//     .treatment-card {
-//       width: 100%;
-//       min-height: auto;
-//       padding: rem(20);
-//       border-radius: rem(20);
-//     }
-
-//     .treatment-card p {
-//       max-width: rem(593);
-//     }
-
-//     .treatment-card img {
-//       display: none;
-//     }
-
-//     .treatment-description {
-//       margin-top: rem(20);
-//       font-size: rem(16);
-//       line-height: 120%;
-//     }
-//   }
