--- a/scss/block/_usage.scss
+++ b/scss/block/_usage.scss
@@ -6,6 +6,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @include mobile {
+    padding-top: rem(100);
+    align-items: start;
+  }
 }
 
 .usage__title {
@@ -60,6 +65,10 @@
     text-align: center;
     margin-bottom: rem(30);
 
+    @include mobile {
+      font-size: 18px;
+    }
+
     span {
       font-size: 0.7em;
       vertical-align: top;
@@ -79,6 +88,11 @@
     img {
       width: rem(55);
       user-select: none;
+
+      @include mobile {
+        width: 35px;
+        height: 35px;
+      }
     }
 
     p {
@@ -89,6 +103,10 @@
 
       @include tablet {
         max-width: 100%;
+      }
+
+      @include mobile {
+        font-size: 14px;
       }
 
       strong {
@@ -111,72 +129,19 @@
     font-size: rem(20);
     line-height: 100%;
     font-weight: 400;
+
+    @include mobile {
+      font-size: 16px;
+    }
   }
 
   p:last-of-type {
     font-size: rem(14);
     line-height: 143%;
     font-weight: 400;
+
+    @include mobile {
+      font-size: 14px;
+    }
   }
 }
-
-// @media (max-width: rem(1023)) {
-//   .usage-images {
-//     flex-direction: column;
-//     flex-grow: 1;
-//     align-items: center;
-//   }
-// }
-
-// @media (max-width: rem(767)) {
-//   .usage-container {
-//     justify-content: start;
-//   }
-
-//   .usage-title {
-//     font-size: rem(24);
-//   }
-
-//   .usage-content {
-//     margin-top: rem(20);
-//     flex-direction: column;
-//     gap: rem(20);
-//   }
-
-//   .usage-instructions {
-//     padding: rem(12);
-//     border-radius: rem(20);
-//     gap: rem(12);
-//   }
-
-//   .usage-images {
-//     flex-direction: row;
-//     align-items: center;
-//   }
-
-//   .usage-text {
-//     margin-top: rem(20);
-//   }
-
-//   .instruction-title {
-//     margin-bottom: 0;
-//     font-size: rem(18);
-//   }
-
-//   .instruction-text {
-//     font-size: rem(14);
-//   }
-
-//   .additional-info {
-//     font-size: rem(14);
-//   }
-
-//   .instruction-icon {
-//     width: rem(30);
-//     height: rem(30);
-//   }
-
-//   .disclaimer {
-//     font-size: rem(12);
-//   }
-// }
